Add jacoco plugin to track code coverage