@@ -84,6 +84,44 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>coverage-reports</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                  <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.7.5.201505241946</version>
+                      <executions>
+                        <execution>
+                            <id>default-prepare-agent</id>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>default-report</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>report</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                  </plugin>
+                  <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-surefire-plugin</artifactId>
+                      <version>2.18.1</version>
+                      <configuration>
+                          <argLine>${argLine} -XX:MaxPermSize=${MaxPermSize}</argLine>
+                      </configuration>
+                  </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <build>
